--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "python.analysis.typeCheckingMode": "basic",
-    "editor.codeActionsOnSave": {}
+    "editor.codeActionsOnSave": {
+    "source.organizeImports": true,
+        "source.fixAll": true
+    },
+    "ruff.importStrategy": "useBundled"
 }
