--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,7 @@
 {
-    "python.analysis.typeCheckingMode": "basic",
-    "editor.codeActionsOnSave": {
-    "source.organizeImports": true,
-        "source.fixAll": true
+    "[python]": {
+        "editor.defaultFormatter": "ms-python.black-formatter"
     },
-    "ruff.importStrategy": "useBundled"
+    "python.formatting.provider": "none",
+    "python.analysis.typeCheckingMode": "basic"
 }
