--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,17 +4,18 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
 
         {
             "name": "Python: Current File",
             "type": "python",
             "request": "launch",
             "program": "${file}",
-            //"console": "integratedTerminal",
-            "console":"internalConsole",
+            "console": "integratedTerminal",
+            //"console":"internalConsole",
             "justMyCode": true,
             
-            "args": ["Gierius Kuprys", "13", "12"]
+            "args": ["Tadas Blinda", "13", "12"]
         }
     ]
 }
