--- a/connect/config.json
+++ b/connect/config.json
@@ -2,7 +2,6 @@
     "user_name": "ufo",
     "user_psswd": "pempiai234",
     "host":"192.168.1.81",
-    "port": "27017",
-    "database":"cafeteria",
-    "collection": "customer"
+    "port": "27017"
+    
 }
